<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Red"
    android:gravity="center"
    tools:context=".SecondFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvName"
        android:padding="@dimen/margin"
        android:layout_marginVertical="@dimen/margin"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:layout_marginVertical="@dimen/margin"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCite"
        android:textSize="20sp"
        android:padding="@dimen/margin"
        android:layout_marginVertical="@dimen/margin"
        android:textColor="@color/black"
        android:id="@+id/tvCity1"/>
    <TextView
        android:id="@+id/tvCity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:layout_marginVertical="@dimen/margin"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:layout_marginVertical="@dimen/margin"
        android:id="@+id/btnBack"
        android:text="@string/btnBack"
        android:textColor="@color/white"  />
</LinearLayout>